nixidy/generated/prod/kratos/Deployment-kratos-admin-ui.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/controller: kratos-admin-ui
    app.kubernetes.io/instance: kratos-admin-ui
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: kratos-admin-ui
  name: kratos-admin-ui
  namespace: identity
spec:
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app.kubernetes.io/controller: kratos-admin-ui
      app.kubernetes.io/instance: kratos-admin-ui
      app.kubernetes.io/name: kratos-admin-ui
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app.kubernetes.io/controller: kratos-admin-ui
        app.kubernetes.io/instance: kratos-admin-ui
        app.kubernetes.io/name: kratos-admin-ui
    spec:
      automountServiceAccountToken: true
      containers:
        - image: licenseware/ory-admin-ui:v0.1.1
          livenessProbe:
            failureThreshold: 3
            initialDelaySeconds: 0
            periodSeconds: 10
            tcpSocket:
              port: 8080
            timeoutSeconds: 1
          name: kratos-admin-ui
          readinessProbe:
            failureThreshold: 3
            initialDelaySeconds: 0
            periodSeconds: 10
            tcpSocket:
              port: 8080
            timeoutSeconds: 1
          startupProbe:
            failureThreshold: 3
            initialDelaySeconds: 0
            periodSeconds: 10
            tcpSocket:
              port: 8080
            timeoutSeconds: 1
      dnsPolicy: ClusterFirst
      enableServiceLinks: false
      hostIPC: false
      hostNetwork: false
      hostPID: false
      serviceAccountName: default
