nixidy/generated/prod/kratos/Pod-kratos-test-connection.yaml
apiVersion: v1
kind: Pod
metadata:
  annotations:
    helm.sh/hook: test-success
  labels:
    app.kubernetes.io/instance: kratos
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: kratos
  name: kratos-test-connection
  namespace: identity
spec:
  containers:
    - args:
        - kratos-admin:80/admin/health/ready
      command:
        - wget
      image: busybox:1
      name: wget
  restartPolicy: Never
