nixidy/generated/prod/kratos/StatefulSet-kratos-courier.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  labels:
    app.kubernetes.io/component: courier
    app.kubernetes.io/instance: kratos
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: kratos
  name: kratos-courier
  namespace: identity
spec:
  replicas: 1
  revisionHistoryLimit: 5
  selector:
    matchLabels:
      app.kubernetes.io/instance: kratos
      app.kubernetes.io/name: kratos-courier
  serviceName: kratos-courier
  template:
    metadata:
      annotations:
        checksum/kratos-config: 83a2574f07acfbbafd4bd90fa54dd776e5251c5c26e19f05de7a5cccf7095eb4
        checksum/kratos-templates: 01ba4719c80b6fe911b091a7c05124b64eeece964e09c058ef8f9805daca546b
      labels:
        app.kubernetes.io/component: courier
        app.kubernetes.io/instance: kratos
        app.kubernetes.io/name: kratos-courier
    spec:
      containers:
        - args:
            - courier
            - watch
            - --config
            - /etc/config/kratos.yaml
            - --expose-metrics-port
            - "4434"
          image: oryd/kratos:v25.4.0
          imagePullPolicy: IfNotPresent
          name: kratos-courier
          ports:
            - containerPort: 4434
              name: http-metrics
              protocol: TCP
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
            privileged: false
            readOnlyRootFilesystem: true
            runAsGroup: 65534
            runAsNonRoot: true
            runAsUser: 65534
            seLinuxOptions:
              level: s0:c123,c456
            seccompProfile:
              type: RuntimeDefault
          volumeMounts:
            - mountPath: /etc/config
              name: kratos-config-volume
              readOnly: true
            - mountPath: /etc/kratos/identity.schema.json
              name: identity-schema
              readOnly: true
              subPath: identity.schema.json
      securityContext:
        fsGroup: 65534
        fsGroupChangePolicy: OnRootMismatch
        runAsGroup: 65534
        runAsNonRoot: true
        runAsUser: 65534
        seccompProfile:
          type: RuntimeDefault
      serviceAccountName: kratos
      terminationGracePeriodSeconds: 60
      volumes:
        - configMap:
            name: kratos-config
          name: kratos-config-volume
        - configMap:
            name: kratos-identity-schema
          name: identity-schema
