nixidy/generated/prod/kratos/Service-kratos-admin-ui.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/instance: kratos-admin-ui
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: kratos-admin-ui
    app.kubernetes.io/service: kratos-admin-ui
  name: kratos-admin-ui
  namespace: identity
spec:
  ports:
    - name: http
      port: 8080
      protocol: TCP
      targetPort: 8080
  selector:
    app.kubernetes.io/controller: kratos-admin-ui
    app.kubernetes.io/instance: kratos-admin-ui
    app.kubernetes.io/name: kratos-admin-ui
  type: ClusterIP
