nixidy/generated/prod/kratos/Service-kratos-courier.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/component: courier
    app.kubernetes.io/instance: kratos
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: kratos
  name: kratos-courier
  namespace: identity
spec:
  clusterIP: None
  ports:
    - name: http-metrics
      port: 80
      protocol: TCP
      targetPort: http-metrics
  selector:
    app.kubernetes.io/instance: kratos
    app.kubernetes.io/name: kratos-courier
  type: ClusterIP
