nixidy/generated/prod/kratos/Service-kratos-public.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/component: public
    app.kubernetes.io/instance: kratos
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: kratos
  name: kratos-public
  namespace: identity
spec:
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: http-public
  selector:
    app.kubernetes.io/instance: kratos
    app.kubernetes.io/name: kratos
  type: ClusterIP
