nixidy/generated/prod/kratos/Service-kratos-ui.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/instance: kratos-ui
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: kratos-ui
    app.kubernetes.io/service: kratos-ui
  name: kratos-ui
  namespace: identity
spec:
  ports:
    - name: http
      port: 3000
      protocol: TCP
      targetPort: 3000
  selector:
    app.kubernetes.io/controller: kratos-ui
    app.kubernetes.io/instance: kratos-ui
    app.kubernetes.io/name: kratos-ui
  type: ClusterIP
