nixidy/generated/prod/kratos/HTTPRoute-kratos-admin-ui.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  labels:
    app.kubernetes.io/instance: kratos-admin-ui
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: kratos-admin-ui
  name: kratos-admin-ui
  namespace: identity
spec:
  hostnames:
    - admin.trdos.me
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: internal
      namespace: kube-system
      sectionName: https
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: kratos-admin-ui
          namespace: identity
          port: 8080
          weight: 1
