nixidy/generated/prod/kratos/HTTPRoute-kratos-public.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: kratos-public
  namespace: identity
spec:
  hostnames:
    - auth.trdos.me
  parentRefs:
    - name: internal
      namespace: kube-system
      sectionName: https
  rules:
    - backendRefs:
        - name: kratos-public
          port: 80
