nixidy/generated/prod/kratos/HTTPRoute-kratos-ui.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: kratos-ui
  namespace: identity
spec:
  hostnames:
    - login.trdos.me
  parentRefs:
    - name: internal
      namespace: kube-system
      sectionName: https
  rules:
    - backendRefs:
        - name: kratos-ui
          port: 3000
